css: avoid scrollbars for the "content" block
Ticket: #109

--- a/apps/web_theme/static/theme/uoa-psd/style.css
+++ b/apps/web_theme/static/theme/uoa-psd/style.css
@@ -97,7 +97,6 @@ input.checkbox {
   border-right: 1px solid #ccc; */
   background: #fff;
   padding: 18px;
-  overflow:auto;
   border:none;
 }
 
